rework of stage mapping, better guarding around Time and Duration (and fix some bugs), new data including main summer closure removal@